<resources>
    <string name="app_name">PZ1</string>
    <string name="text">Введите текст</string>
    <string name="button">Кнопка</string>
    <string name="checkbox1">Вы принимаете наши условия?</string>
    <string name="switch1">Переключатель</string>
    <string name="name">Введите Имя</string>
    <string name="phone">Введите телефон</string>
    <string name="number">Введите номер</string>
    <string name="password">Введите пароль</string>
    <string name="email">Введите Email</string>
    <string name="c">C</string>
    <string name="div">/</string>
    <string name="umn">*</string>
    <string name="steret"><![CDATA[<-]]></string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="ravno">=</string>
    <string name="_0">0</string>
    <string name="zapitaya">,</string>
    <string name="m">-M</string>
    <string name="the_theme_of_the_day_night">Тема день/ночь</string>
    <string name="buttonActivity">Перейти на другую активити</string>
</resources>